--- a/Frontend/movie-gold-v1/package.json
+++ b/Frontend/movie-gold-v1/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-material-ui-carousel": "^3.4.2",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
